--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,22 +1,44 @@
 main:
 
-  - title: Continual Learning for Abdominal Multi-Organ and Tumor Segmentation
-    authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
-    conference_short: MICCAI
-    conference: International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.
-    pdf: https://arxiv.org/pdf/2306.00988.pdf
-    code: https://github.com/MrGiovanni/ContinualLearning
-    bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/teaser_example_2.png
-    notes: Early Accept
+  - Artificial Intelligence in Predicting Hard Tissue Regeneration: Current Situation and Upcoming Perspectives
+    Nura Brimo, Dilek Çökeliler Serdaroğlu, Halit Muhittin, Mustafa Kaplan, Abdulwahab Omira
+    Springer Nature Singapore
+    pdf: file:///Users/nurabrimo/Downloads/978-981-96-1341-0.pdf
+    image: ./assets/img/IMG_3517.jpeg
 
-  - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
-    authors: <strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun
-    conference_short: CVPR
-    conference: IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(CVPR)</strong>, 2020.
-    pdf: https://arxiv.org/pdf/2002.10211.pdf
-    code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
-    page: https://class-il.mpi-inf.mpg.de/mnemonics/
-    bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
-    notes: Oral Presentation
-    image: ./assets/img/teaser_example.png
+  - Nanomaterials in Glioblastoma Research, Diagnosis and Therapy
+    Nura Brimo, Ebru Bengisu Denkbas, Burcu Cakar
+    Bentham Science Publishers, 2025
+    pdf: https://benthambooks.com/ebook-files/sample-files/9789815324181-sample.pdf
+    image: ./assets/img/IMG_3518.jpeg
+
+  - Artificial Intelligence and Machine Learning for Material Characterizations and Mechanical Properties
+    Nura Brimo, Dilek Çökeliler Serdaroğlu, Halit Muhittin
+    Springer Nature Singapore, Nano-Biomaterials in Tissue Repair and Regeneration:Materials Characterization, 2024
+    image: ./assets/img/IMG_3517.jpeg
+
+  - Novel Electrospun Polymeric Nanofibers Loaded Different Medicaments as Drug Delivery Systems for Regenerative Endodontics
+    Nura Brimo, Dilek Serdaroğlu, Tamer Uyar, Burcu Uysal, Ebru Betül Kıcı, Merve Dikmen, Zeynep Canturk
+    Current Drug Delivery, Vol. 20 (7), 992-1014, 2023
+    image: ./assets/img/IMG_3520.jpeg
+
+  - Comparing Antibiotic Pastes with Electrospun Nanofibers as Modern Drug Delivery Systems for Regenerative Endodontics
+    Nura Brimo, Dilek Çökeliler Serdaroğlu, Burcu Uysal
+    Current Drug Delivery, Vol. 19 (9), 904-917, 2022
+    image: ./assets/img/IMG_3520.jpeg
+
+  - Antibody Immobilization Techniques in Mass Sensitive Immunosensor: Enhanced Sensitivity through Limited Mass Load
+    K. Kırali, Nura Brimo, Dilek Çökeliler Serdaroğlu
+    Current Analytical Chemistry, Vol. 18 (5), 529-545, 2022
+    image: ./assets/img/IMG_3522.jpeg
+
+  - Emerging Role of Nanomaterial-Assisted Biosensors for Circulating Tumor Cell Detection
+    Nura Brimo, Dilek Çökeliler Serdaroğlu
+    In: Nanotechnology Applications in Health and Environmental Sciences, pp. 159-179, 2021
+    pdf: file:///Users/nurabrimo/Downloads/978-3-030-64410-9.pdf
+    image: ./assets/img/IMG_3523.jpeg
+
+  - Molecular Imprinted Polymers for Mass Sensitive Sensors: Comparation of Performance Toward Immuno-Sensing Strategies
+    Nura Brimo, Dilek Çökeliler Serdaroğlu
+    In: Molecular Imprinting for Nanosensors and Other Sensing Applications, pp. 335-365, 2021
+    image: ./assets/img/IMG_3524.jpeg
