--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,28 +1,9 @@
 main:
 
-  - Artificial Intelligence in Predicting Hard Tissue Regeneration: Current Situation and Upcoming Perspectives
-    pdf: file:///Users/nurabrimo/Downloads/978-981-96-1341-0.pdf
+  - "Artificial Intelligence in Predicting Hard Tissue Regeneration: Current Situation and Upcoming Perspectives"
+    pdf: "file:///Users/nurabrimo/Downloads/978-981-96-1341-0.pdf"
     image: ./assets/img/IMG_3517.jpeg
 
-  - Nanomaterials in Glioblastoma Research, Diagnosis and Therapy
-    pdf: https://benthambooks.com/ebook-files/sample-files/9789815324181-sample.pdf
+  - "Nanomaterials in Glioblastoma Research, Diagnosis and Therapy"
+    pdf: "https://benthambooks.com/ebook-files/sample-files/9789815324181-sample.pdf"
     image: ./assets/img/IMG_3518.jpeg
-
-  - Artificial Intelligence and Machine Learning for Material Characterizations and Mechanical Properties
-    image: ./assets/img/IMG_3517.jpeg
-
-  - Novel Electrospun Polymeric Nanofibers Loaded Different Medicaments as Drug Delivery Systems for Regenerative Endodontics
-    image: ./assets/img/IMG_3520.jpeg
-
-  - Comparing Antibiotic Pastes with Electrospun Nanofibers as Modern Drug Delivery Systems for Regenerative Endodontics
-    image: ./assets/img/IMG_3520.jpeg
-
-  - Antibody Immobilization Techniques in Mass Sensitive Immunosensor: Enhanced Sensitivity through Limited Mass Load
-    image: ./assets/img/IMG_3522.jpeg
-
-  - Emerging Role of Nanomaterial-Assisted Biosensors for Circulating Tumor Cell Detection
-    pdf: file:///Users/nurabrimo/Downloads/978-3-030-64410-9.pdf
-    image: ./assets/img/IMG_3523.jpeg
-
-  - Molecular Imprinted Polymers for Mass Sensitive Sensors: Comparation of Performance Toward Immuno-Sensing Strategies
-    image: ./assets/img/IMG_3524.jpeg
