--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -20,3 +20,46 @@ main:
     bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
     notes: Oral Presentation
     image: ./assets/img/teaser_example.png
+
+  - title: "Artificial Intelligence in Predicting Hard Tissue Regeneration: Current Situation and Upcoming Perspectives"
+    authors: "Nura Brimo, Dilek Çökeliler Serdaroğlu, Halit Muhittin, Mustafa Kaplan, Abdulwahab Omira"
+    venue: "Springer Nature Singapore"
+    pdf: "file:///Users/nurabrimo/Downloads/978-981-96-1341-0.pdf"
+    image: "./assets/img/IMG_3517.jpeg"
+
+  - title: "Nanomaterials in Glioblastoma Research, Diagnosis and Therapy"
+    authors: "Nura Brimo, Ebru Bengisu Denkbas, Burcu Cakar"
+    venue: "Bentham Science Publishers, 2025"
+    pdf: "https://benthambooks.com/ebook-files/sample-files/9789815324181-sample.pdf"
+    image: "./assets/img/IMG_3518.jpeg"
+
+  - title: "Artificial Intelligence and Machine Learning for Material Characterizations and Mechanical Properties"
+    authors: "Nura Brimo, Dilek Çökeliler Serdaroğlu, Halit Muhittin"
+    venue: "Springer Nature Singapore, Nano-Biomaterials in Tissue Repair and Regeneration: Materials Characterization, 2024"
+    image: "./assets/img/IMG_3517.jpeg"
+
+  - title: "Novel Electrospun Polymeric Nanofibers Loaded Different Medicaments as Drug Delivery Systems for Regenerative Endodontics"
+    authors: "Nura Brimo, Dilek Serdaroğlu, Tamer Uyar, Burcu Uysal, Ebru Betül Kıcı, Merve Dikmen, Zeynep Canturk"
+    venue: "Current Drug Delivery, Vol. 20 (7), 992-1014, 2023"
+    image: "./assets/img/IMG_3520.jpeg"
+
+  - title: "Comparing Antibiotic Pastes with Electrospun Nanofibers as Modern Drug Delivery Systems for Regenerative Endodontics"
+    authors: "Nura Brimo, Dilek Çökeliler Serdaroğlu, Burcu Uysal"
+    venue: "Current Drug Delivery, Vol. 19 (9), 904-917, 2022"
+    image: "./assets/img/IMG_3520.jpeg"
+
+  - title: "Antibody Immobilization Techniques in Mass Sensitive Immunosensor: Enhanced Sensitivity through Limited Mass Load"
+    authors: "K. Kırali, Nura Brimo, Dilek Çökeliler Serdaroğlu"
+    venue: "Current Analytical Chemistry, Vol. 18 (5), 529-545, 2022"
+    image: "./assets/img/IMG_3522.jpeg"
+
+  - title: "Emerging Role of Nanomaterial-Assisted Biosensors for Circulating Tumor Cell Detection"
+    authors: "Nura Brimo, Dilek Çökeliler Serdaroğlu"
+    venue: "Nanotechnology Applications in Health and Environmental Sciences, pp. 159-179, 2021"
+    pdf: "file:///Users/nurabrimo/Downloads/978-3-030-64410-9.pdf"
+    image: "./assets/img/IMG_3523.jpeg"
+
+  - title: "Molecular Imprinted Polymers for Mass Sensitive Sensors: Comparation of Performance Toward Immuno-Sensing Strategies"
+    authors: "Nura Brimo, Dilek Çökeliler Serdaroğlu"
+    venue: "Molecular Imprinting for Nanosensors and Other Sensing Applications, pp. 335-365, 2021"
+    image: "./assets/img/IMG_3524.jpeg"
