--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -21,10 +21,9 @@ main:
     notes: Oral Presentation
     image: ./assets/img/teaser_example.png
 
-  - title: "Artificial Intelligence in Predicting Hard Tissue Regeneration: Current Situation and Upcoming Perspectives"
-    authors: "Nura Brimo, Dilek Çökeliler Serdaroğlu, Halit Muhittin, Mustafa Kaplan, Abdulwahab Omira"
-    venue: "Springer Nature Singapore"
-    pdf: "file:///Users/nurabrimo/Downloads/978-981-96-1341-0.pdf"
+  - title: Artificial Intelligence in Predicting Hard Tissue Regeneration: Current Situation and Upcoming Perspectives
+    authors: Nura Brimo, Dilek Çökeliler Serdaroğlu, Halit Muhittin, Mustafa Kaplan, Abdulwahab Omira
+    conference: "Springer Nature Singapore"
     image: "./assets/img/IMG_3517.jpeg"
 
   - title: "Nanomaterials in Glioblastoma Research, Diagnosis and Therapy"
