--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,29 +1,42 @@
 main:
 
-  - title: Continual Learning for Abdominal Multi-Organ and Tumor Segmentation
-    authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
-    conference_short: MICCAI
-    conference: International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.
-    pdf: https://arxiv.org/pdf/2306.00988.pdf
-    code: https://github.com/MrGiovanni/ContinualLearning
-    bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/teaser_example_2.png
-    notes: Early Accept
-
-  - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
-    authors: <strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun
-    conference_short: CVPR
-    conference: IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(CVPR)</strong>, 2020.
-    pdf: https://arxiv.org/pdf/2002.10211.pdf
-    code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
-    page: https://class-il.mpi-inf.mpg.de/mnemonics/
-    bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
-    notes: Oral Presentation
-    image: ./assets/img/teaser_example.png
-
   - title: Artificial Intelligence in Predicting Hard Tissue Regeneration Current Situation and Upcoming Perspectives
     authors: Nura Brimo, Dilek Çökeliler Serdaroğlu, Halit Muhittin, Mustafa Kaplan, Abdulwahab Omira
     conference: "Springer Nature Singapore"
     image: ./assets/img/IMG_3517.jpeg
 
- 
+  - title: "Nanomaterials in Glioblastoma Research, Diagnosis and Therapy"
+    authors: "Nura Brimo, Ebru Bengisu Denkbas, Burcu Cakar"
+    conference: "Bentham Science Publishers, 2025"
+    pdf: "https://benthambooks.com/ebook-files/sample-files/9789815324181-sample.pdf"
+    image: ./assets/img/IMG_3518.jpeg
+
+  - title: "Artificial Intelligence and Machine Learning for Material Characterizations and Mechanical Properties"
+    authors: "Nura Brimo, Dilek Çökeliler Serdaroğlu, Halit Muhittin"
+    conference: "Springer Nature Singapore, Nano-Biomaterials in Tissue Repair and Regeneration: Materials Characterization, 2024"
+    image: ./assets/img/IMG_3517.jpeg
+
+  - title: "Novel Electrospun Polymeric Nanofibers Loaded Different Medicaments as Drug Delivery Systems for Regenerative Endodontics"
+    authors: "Nura Brimo, Dilek Serdaroğlu, Tamer Uyar, Burcu Uysal, Ebru Betül Kıcı, Merve Dikmen, Zeynep Canturk"
+    conference: "Current Drug Delivery, Vol. 20 (7), 992-1014, 2023"
+    image: ./assets/img/IMG_3520.jpeg
+
+  - title: "Comparing Antibiotic Pastes with Electrospun Nanofibers as Modern Drug Delivery Systems for Regenerative Endodontics"
+    authors: "Nura Brimo, Dilek Çökeliler Serdaroğlu, Burcu Uysal"
+    conference: "Current Drug Delivery, Vol. 19 (9), 904-917, 2022"
+    image: ./assets/img/IMG_3520.jpeg
+
+  - title: "Antibody Immobilization Techniques in Mass Sensitive Immunosensor: Enhanced Sensitivity through Limited Mass Load"
+    authors: "K. Kırali, Nura Brimo, Dilek Çökeliler Serdaroğlu"
+    conference: "Current Analytical Chemistry, Vol. 18 (5), 529-545, 2022"
+    image: ./assets/img/IMG_3522.jpeg
+
+  - title: "Emerging Role of Nanomaterial-Assisted Biosensors for Circulating Tumor Cell Detection"
+    authors: "Nura Brimo, Dilek Çökeliler Serdaroğlu"
+    conference: "Nanotechnology Applications in Health and Environmental Sciences, pp. 159-179, 2021"
+    image: ./assets/img/IMG_3523.jpeg
+
+  - title: "Molecular Imprinted Polymers for Mass Sensitive Sensors: Comparation of Performance Toward Immuno-Sensing Strategies"
+    authors: "Nura Brimo, Dilek Çökeliler Serdaroğlu"
+    venue: "Molecular Imprinting for Nanosensors and Other Sensing Applications, pp. 335-365, 2021"
+    image: ./assets/img/IMG_3524.jpeg
